<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/background_repeat" >

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="20dp" >

            <TextView
                    android:id="@+id/descriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/special"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_margin="20dp" >

            <TextView
                    android:id="@+id/categoryTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:textColor="@color/special"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="20dp" >

            <TextView
                    android:id="@+id/typeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="italic"
                android:textColor="@color/special"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="20dp" >

            <TextView
                    android:id="@+id/serialTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_number"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
                android:id="@+id/serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="italic"
                android:textColor="@color/special"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"  />

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="20dp" >

            <TextView
                    android:id="@+id/yearTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textStyle="italic"
                android:textColor="@color/special"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableLayout>
</ScrollView>
